force-app/main/default/objects/Quote/fields/Added_Square_Feet__c.field-meta.xml
<CustomField>
    <fullName>Added_Square_Feet__c</fullName>
    <label>Added Square Feet</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>