force-app/main/default/objects/Quote/fields/Annual_Flood__c.field-meta.xml
<CustomField>
    <fullName>Annual_Flood__c</fullName>
    <label>Annual Flood</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>