force-app/main/default/objects/Quote/fields/Annual_HOA__c.field-meta.xml
<CustomField>
    <fullName>Annual_HOA__c</fullName>
    <label>Annual HOA</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>