force-app/main/default/objects/Quote/fields/Annual_Management__c.field-meta.xml
<CustomField>
    <fullName>Annual_Management__c</fullName>
    <label>Annual Management</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>