force-app/main/default/objects/Quote/fields/Annual_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Annual_Taxes__c</fullName>
    <label>Annual Taxes</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>