force-app/main/default/objects/Quote/fields/Application_Completed__c.field-meta.xml
<CustomField>
    <fullName>Application_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Completed</label>
    <type>Checkbox</type>
</CustomField>