force-app/main/default/objects/Quote/fields/Appraisal_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appraisal Confirmed</label>
    <type>Checkbox</type>
</CustomField>