force-app/main/default/objects/Quote/fields/Bank_Statements__c.field-meta.xml
<CustomField>
    <fullName>Bank_Statements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Statements</label>
    <type>Checkbox</type>
</CustomField>