force-app/main/default/objects/Quote/fields/Broker_Commission__c.field-meta.xml
<CustomField>
    <fullName>Broker_Commission__c</fullName>
    <formula>( Loan_Amount__c * Broker_Origination__c ) + ( Loan_Amount__c * Broker_YSP__c ) + Broker_Processing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>