force-app/main/default/objects/Quote/fields/Broker_Origination__c.field-meta.xml
<CustomField>
    <fullName>Broker_Origination__c</fullName>
    <label>Broker Origination</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>