force-app/main/default/objects/Quote/fields/Broker_Processing__c.field-meta.xml
<CustomField>
    <fullName>Broker_Processing__c</fullName>
    <label>Broker Processing</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>