force-app/main/default/objects/Quote/fields/Broker_YSP__c.field-meta.xml
<CustomField>
    <fullName>Broker_YSP__c</fullName>
    <label>Broker YSP</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>