force-app/main/default/objects/Quote/fields/Budget_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Budget_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Budget Submitted</label>
    <type>Checkbox</type>
</CustomField>