force-app/main/default/objects/Quote/fields/Capital_Improvements__c.field-meta.xml
<CustomField>
    <fullName>Capital_Improvements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capital Improvements</label>
    <type>Checkbox</type>
</CustomField>