force-app/main/default/objects/Quote/fields/Cash_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Cash_to_Close__c</fullName>
    <label>Cash to Close</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>