force-app/main/default/objects/Quote/fields/Closing_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Closing_Scheduled__c</fullName>
    <label>Closing Scheduled</label>
    <type>DateTime</type>
</CustomField>