force-app/main/default/objects/Quote/fields/Completed_Value_ARV__c.field-meta.xml
<CustomField>
    <fullName>Completed_Value_ARV__c</fullName>
    <label>Completed Value/ARV</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>