force-app/main/default/objects/Quote/fields/Construction__c.field-meta.xml
<CustomField>
    <fullName>Construction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Construction</label>
    <type>Checkbox</type>
</CustomField>