force-app/main/default/objects/Quote/fields/Contract_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Closing_Date__c</fullName>
    <label>Contract Closing Date</label>
    <type>Date</type>
</CustomField>