force-app/main/default/objects/Quote/fields/Current_Rent__c.field-meta.xml
<CustomField>
    <fullName>Current_Rent__c</fullName>
    <label>Current Rent</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>