force-app/main/default/objects/Quote/fields/Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Value__c</fullName>
    <label>Current Value</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>