force-app/main/default/objects/Quote/fields/Entity_Documents__c.field-meta.xml
<CustomField>
    <fullName>Entity_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entity Documents</label>
    <type>Checkbox</type>
</CustomField>