force-app/main/default/objects/Quote/fields/Expansion__c.field-meta.xml
<CustomField>
    <fullName>Expansion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Expansion</label>
    <type>Checkbox</type>
</CustomField>