force-app/main/default/objects/Quote/fields/Expectations_Notes__c.field-meta.xml
<CustomField>
    <fullName>Expectations_Notes__c</fullName>
    <label>Expectations Notes</label>
    <type>TextArea</type>
</CustomField>