force-app/main/default/objects/Quote/fields/Final_Square_Feet__c.field-meta.xml
<CustomField>
    <fullName>Final_Square_Feet__c</fullName>
    <label>Final Square Feet</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>