force-app/main/default/objects/Quote/fields/Fixed_Rate_Period__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Rate_Period__c</fullName>
    <label>Fixed Rate Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>