force-app/main/default/objects/Quote/fields/Highest_Credit__c.field-meta.xml
<CustomField>
    <fullName>Highest_Credit__c</fullName>
    <label>Highest Credit</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>