force-app/main/default/objects/Quote/fields/HUD_CD__c.field-meta.xml
<CustomField>
    <fullName>HUD_CD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HUD/CD</label>
    <type>Checkbox</type>
</CustomField>