force-app/main/default/objects/Quote/fields/Identification_Documents__c.field-meta.xml
<CustomField>
    <fullName>Identification_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Identification Documents</label>
    <type>Checkbox</type>
</CustomField>