force-app/main/default/objects/Quote/fields/Insurance_Company_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Contact_Name__c</fullName>
    <label>Insurance Company Contact Name</label>
    <length>99</length>
    <type>Text</type>
</CustomField>