force-app/main/default/objects/Quote/fields/Insurance_Contact__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>