force-app/main/default/objects/Quote/fields/Insurance_Documents__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Documents</label>
    <type>Checkbox</type>
</CustomField>