force-app/main/default/objects/Quote/fields/Insurance_Info__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Info</label>
    <type>Checkbox</type>
</CustomField>