force-app/main/default/objects/Quote/fields/Interest_Only_Payment__c.field-meta.xml
<CustomField>
    <fullName>Interest_Only_Payment__c</fullName>
    <label>Interest Only Payment</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>