force-app/main/default/objects/Quote/fields/Interest_Only_Period__c.field-meta.xml
<CustomField>
    <fullName>Interest_Only_Period__c</fullName>
    <label>Interest Only Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>