force-app/main/default/objects/Quote/fields/Late_Payments_Past_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Late_Payments_Past_12_Months__c</fullName>
    <label>Late Payments Past 12 Months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>