force-app/main/default/objects/Quote/fields/Lender_Delete__c.field-meta.xml
<CustomField>
    <fullName>Lender_Delete__c</fullName>
    <label>Lender Delete</label>
    <type>TextArea</type>
</CustomField>