force-app/main/default/objects/Quote/fields/Lender_Origination__c.field-meta.xml
<CustomField>
    <fullName>Lender_Origination__c</fullName>
    <label>Lender Origination</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>