force-app/main/default/objects/Quote/fields/Lender_Origination_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lender_Origination_Amount__c</fullName>
    <label>Lender Origination Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>