force-app/main/default/objects/Quote/fields/Lender_Origination_Fee__c.field-meta.xml
<CustomField>
    <fullName>Lender_Origination_Fee__c</fullName>
    <formula>Loan_Amount__c * Lender_Origination__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lender Origination Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>