force-app/main/default/objects/Quote/fields/Lender_Processing__c.field-meta.xml
<CustomField>
    <fullName>Lender_Processing__c</fullName>
    <label>Lender Processing</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>