force-app/main/default/objects/Quote/fields/Liquidity_Required__c.field-meta.xml
<CustomField>
    <fullName>Liquidity_Required__c</fullName>
    <label>Liquidity Required</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>