force-app/main/default/objects/Quote/fields/Loan_Amount_Seeking__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount_Seeking__c</fullName>
    <label>Loan Amount Seeking</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>