force-app/main/default/objects/Quote/fields/Loan_Balance_Total__c.field-meta.xml
<CustomField>
    <fullName>Loan_Balance_Total__c</fullName>
    <label>Loan Balance Total</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>