force-app/main/default/objects/Quote/fields/Loan_Cash_Out_Proceeds__c.field-meta.xml
<CustomField>
    <fullName>Loan_Cash_Out_Proceeds__c</fullName>
    <formula>Loan_Amount__c - Loan_Balance_Total__c - Total_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Cash-Out Proceeds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>