force-app/main/default/objects/Quote/fields/Loan_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Loan_Maturity__c</fullName>
    <label>Loan Maturity</label>
    <type>Date</type>
</CustomField>