force-app/main/default/objects/Quote/fields/Loan_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Loan_Narrative__c</fullName>
    <label>Loan Narrative</label>
    <type>TextArea</type>
</CustomField>