force-app/main/default/objects/Quote/fields/Loan_Notes__c.field-meta.xml
<CustomField>
    <fullName>Loan_Notes__c</fullName>
    <label>Loan Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>