force-app/main/default/objects/Quote/fields/Loan_Program__c.field-meta.xml
<CustomField>
    <fullName>Loan_Program__c</fullName>
    <label>Loan Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bridge Loan</fullName>
            </value>
            <value>
                <fullName>Rehab Loan</fullName>
            </value>
            <value>
                <fullName>Rental Loan</fullName>
            </value>
            <value>
                <fullName>New Construction Loan</fullName>
            </value>
            <value>
                <fullName>Vacation Rental</fullName>
            </value>
            <value>
                <fullName>SBA 7a</fullName>
            </value>
            <value>
                <fullName>SBA 504</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>