force-app/main/default/objects/Quote/fields/Loan_Timing__c.field-meta.xml
<CustomField>
    <fullName>Loan_Timing__c</fullName>
    <label>Loan Timing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediately</fullName>
            </value>
            <value>
                <fullName>1 Month</fullName>
            </value>
            <value>
                <fullName>2-3 Months</fullName>
            </value>
            <value>
                <fullName>4-6 Months</fullName>
            </value>
            <value>
                <fullName>7-12 Months</fullName>
            </value>
            <value>
                <fullName>Over Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>