force-app/main/default/objects/Quote/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing Details</fullName>
            </value>
            <value>
                <fullName>Property Doesn&apos;t Qualify</fullName>
            </value>
            <value>
                <fullName>Offer Not Accepted</fullName>
            </value>
            <value>
                <fullName>Low Liquidity</fullName>
            </value>
            <value>
                <fullName>Low Leverage</fullName>
            </value>
            <value>
                <fullName>High Rate</fullName>
            </value>
            <value>
                <fullName>High Fee</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Debt Service</fullName>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Decided to Sell</fullName>
            </value>
            <value>
                <fullName>Declined Loan</fullName>
            </value>
            <value>
                <fullName>Exit During Inspection</fullName>
            </value>
            <value>
                <fullName>Valuation</fullName>
            </value>
            <value>
                <fullName>Credit Issue</fullName>
            </value>
            <value>
                <fullName>Background</fullName>
            </value>
            <value>
                <fullName>Liens</fullName>
            </value>
            <value>
                <fullName>Title Issue</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Decided not to purchase</fullName>
            </value>
            <value>
                <fullName>Under contract with another buyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>