force-app/main/default/objects/Quote/fields/Market_Rents__c.field-meta.xml
<CustomField>
    <fullName>Market_Rents__c</fullName>
    <label>Market Rents</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>