force-app/main/default/objects/Quote/fields/Minimum_ARV_Required__c.field-meta.xml
<CustomField>
    <fullName>Minimum_ARV_Required__c</fullName>
    <label>Minimum ARV Required</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>