force-app/main/default/objects/Quote/fields/Missing_Info__c.field-meta.xml
<CustomField>
    <fullName>Missing_Info__c</fullName>
    <label>Missing Info</label>
    <type>TextArea</type>
</CustomField>