force-app/main/default/objects/Quote/fields/Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment__c</fullName>
    <label>Monthly Payment</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>