force-app/main/default/objects/Quote/fields/Monthly_Payment_Final__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_Final__c</fullName>
    <label>Monthly Payment Final</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>