force-app/main/default/objects/Quote/fields/Number_of_Units_Occupied__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units_Occupied__c</fullName>
    <label>Number of Units Occupied</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>