force-app/main/default/objects/Quote/fields/Occupancy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Rate__c</fullName>
    <formula>Number_of_Units_Occupied__c / Number_of_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupancy Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>