force-app/main/default/objects/Quote/fields/Operating_Statement__c.field-meta.xml
<CustomField>
    <fullName>Operating_Statement__c</fullName>
    <label>Operating Statement</label>
    <type>Url</type>
</CustomField>