force-app/main/default/objects/Quote/fields/PITIA__c.field-meta.xml
<CustomField>
    <fullName>PITIA__c</fullName>
    <label>PITIA</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>