force-app/main/default/objects/Quote/fields/Property_Zip__c.field-meta.xml
<CustomField>
    <fullName>Property_Zip__c</fullName>
    <label>Property Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>