force-app/main/default/objects/Quote/fields/Purchase_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchase Agreement</label>
    <type>Checkbox</type>
</CustomField>