force-app/main/default/objects/Quote/fields/Purchase_Business__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchase Business</label>
    <type>Checkbox</type>
</CustomField>