force-app/main/default/objects/Quote/fields/Purchase_Real_Estate__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Real_Estate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchase Real Estate</label>
    <type>Checkbox</type>
</CustomField>