force-app/main/default/objects/Quote/fields/Refinance_Debt__c.field-meta.xml
<CustomField>
    <fullName>Refinance_Debt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refinance Debt</label>
    <type>Checkbox</type>
</CustomField>