force-app/main/default/objects/Quote/fields/Refinance_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Refinance_Purchase_Date__c</fullName>
    <label>Refinance Purchase Date</label>
    <type>Date</type>
</CustomField>