force-app/main/default/objects/Quote/fields/Rehab_Loan_Cash_Out__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Loan_Cash_Out__c</fullName>
    <formula>Loan_Amount__c - Loan_Balance_Total__c - Total_Fee__c - Repairs_Needed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rehab Loan Cash Out</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>