force-app/main/default/objects/Quote/fields/Rehab_Needed_Completed__c.field-meta.xml
<CustomField>
    <fullName>Rehab_Needed_Completed__c</fullName>
    <label>Rehab Needed/Completed</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>