force-app/main/default/objects/Quote/fields/Rent_Roll__c.field-meta.xml
<CustomField>
    <fullName>Rent_Roll__c</fullName>
    <label>Rent Roll</label>
    <type>Url</type>
</CustomField>