force-app/main/default/objects/Quote/fields/Rental_Income__c.field-meta.xml
<CustomField>
    <fullName>Rental_Income__c</fullName>
    <label>Rental Income</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>