force-app/main/default/objects/Quote/fields/Repairs_Completed__c.field-meta.xml
<CustomField>
    <fullName>Repairs_Completed__c</fullName>
    <label>Repairs Completed</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>