force-app/main/default/objects/Quote/fields/Repairs_Needed__c.field-meta.xml
<CustomField>
    <fullName>Repairs_Needed__c</fullName>
    <label>Repairs Needed</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>