force-app/main/default/objects/Quote/fields/Salesvue_Add_To_Plan_Ids__c.field-meta.xml
<CustomField>
    <fullName>Salesvue_Add_To_Plan_Ids__c</fullName>
    <label>Salesvue Add To Plan Ids</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>