force-app/main/default/objects/Quote/fields/Salesvue_Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Salesvue_Plan_Status__c</fullName>
    <label>Salesvue Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>