force-app/main/default/objects/Quote/fields/Salesvue_Remove_From_Plan_Ids__c.field-meta.xml
<CustomField>
    <fullName>Salesvue_Remove_From_Plan_Ids__c</fullName>
    <label>Salesvue Remove From Plan Ids</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>