force-app/main/default/objects/Quote/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone (Old)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>