force-app/main/default/objects/Quote/fields/Time_Zone_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Zone</label>
    <referenceTo>SalesVue__Time_Zone__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>