force-app/main/default/objects/Quote/fields/Title_Company_Email__c.field-meta.xml
<CustomField>
    <fullName>Title_Company_Email__c</fullName>
    <label>Title Company Email</label>
    <type>Email</type>
</CustomField>