force-app/main/default/objects/Quote/fields/Title_Company_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Title_Company_Phone_Number__c</fullName>
    <label>Title Company Phone Number</label>
    <type>Phone</type>
</CustomField>