force-app/main/default/objects/Quote/fields/Title_Contact__c.field-meta.xml
<CustomField>
    <fullName>Title_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Title Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Title Contact)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>