force-app/main/default/objects/Quote/fields/Title_Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Title_Contact_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Title Contact Info</label>
    <type>Checkbox</type>
</CustomField>